--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,8 @@ a {
 }
 
 .page__main {}
+.page__services {
+}
 
 .header {
     position: fixed;
@@ -141,6 +143,22 @@ a {
 
 .header-main {}
 
+.header-main__label{
+    display: inline-block;
+    border: 1px solid rgb(129, 129, 139, 0.2);
+    border-radius: 12px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    color: #9c9c9c;
+    padding: 11px 18px;
+    transition: border 0.3s ease 0s;
+}
+.header-main__label:hover{
+    border: 1px solid rgb(129, 129, 139, 0.4);
+}
+.header-main__label:not(:last-child){
+    margin-bottom: 19px;
+}
 .header-main__title {
     font-weight: 500;
     font-size: 51px;
@@ -204,6 +222,7 @@ a {
 }
 
 .text {
+    color: #81818b;
     line-height: 1.5;
 }
 
@@ -512,3 +531,94 @@ a {
         margin-bottom:20px  ;
     }
 }
+/* ---------------------------------------------------------------------- */
+
+
+.services {
+    padding-top: 70px;
+    padding-bottom: 100px;
+}
+.services__container {
+    display: flex;
+    gap: 32px;
+}
+.services__content {
+    flex: 0 1 50%;
+    align-items: center;
+}
+.services__header {
+}
+.services__items {
+    flex: 0 1 50%;
+    display: flex;
+    justify-content: center;
+    gap: 32px;
+}
+.services__column {
+}
+.services__column:first-child{
+    padding-top: 48px;
+}
+.services__item {
+}
+.services__item:not(:last-child){
+    margin-bottom: 32px;
+}
+.item-services {
+    background: rgba(129, 129, 139, 0.1);
+    border-radius: 30px;
+    padding: 55px 25px;
+}
+.item-services__icon {
+}
+.item-services__icon:not(:last-child){
+    margin-bottom: 16px;
+}
+.item-services__title {
+    font-weight: 400;
+    color: #fff;
+    font-size: 19px;
+    line-height: 1.42; 
+}
+.item-services__title:not(:last-child){
+    margin-bottom: 10px;
+}
+.item-services__text {
+}
+
+@media (max-width: 1100px){
+    .services__container{
+        flex-direction: column;
+    }
+    .services__header .header-main__title,
+    .services__header .header-main__text{
+        max-width: none;
+    }
+}
+
+@media (max-width: 991.98) {
+    .services{
+        padding-top: 50px;
+        padding-bottom: 50px;
+    }
+    
+}
+
+@media (max-width: 767.98) {
+    .services{
+        padding-top: 30px;
+        padding-bottom: 30px;
+    }
+    
+}
+
+@media (max-width: 620px){
+    .services .items{
+        flex-direction: column;
+    }
+    .services__column:first-child{
+        padding-top: 0px;
+    }
+
+}
+
