--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,8 @@ a {
 .page__main {}
 .page__services {
 }
+.page__why {
+}
 
 .header {
     position: fixed;
@@ -185,10 +187,32 @@ a {
     display: flex;
     column-gap: 32px;
     row-gap: 15px;
-
 }
 
 .header-main__button {}
+
+.header-main__list li{
+    position: relative;
+    min-height: 32px;
+    padding-left: 40px;
+    color: #9c9c9c;
+    padding-top: 4px;
+    line-height: 1.5;
+}
+.header-main__list li:not(:last-child){
+    margin-bottom: 16px;
+}
+.header-main__list li::before{
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    widows: 32px;
+    height: 32px;
+    border-radius: 50%;
+    background: rgb(129, 129, 139, 0.1) url(/img/why/li.svg) center no-repeat;
+    
+}
 
 @media (max-width: 991.98px) {
     .header-main__title{
@@ -622,3 +646,71 @@ a {
 
 }
 
+/* =============================================================================== */
+
+
+.why {
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+.why__container {
+    display: flex;
+    column-gap: 64px;
+    row-gap: 32px;
+}
+.why__images {
+    flex: 0 1 50%;
+}
+.images-why {
+    display: flex;
+    position: relative;
+    align-self: flex-end;
+}
+.images-why__item {
+    overflow: hidden;
+}
+.images-why__item img{
+    max-width: 100%;
+
+}
+.images-why__item_1 {
+    border-radius: 90% 0 49% 49%  / 50% 0 31% 31%;
+}
+.images-why__item_2 {
+    align-self: flex-end;
+    border-radius: 50% 50% 50% 0;
+}
+.why__content {
+    flex: 0 1 50%;
+    align-self: center;
+}
+.why__header {
+}
+.images-why::before {
+    content: "";
+    background: url(/img/decor.svg) 0 0 / 100% no-repeat;
+    width: 122px;
+    height: 122px;
+    position: absolute;
+    bottom: -10px;
+    left: -34px;
+}
+
+
+@media (max-width: 991.98) {
+    .why{
+        padding-top: 50px;
+        padding-bottom: 50px;
+    }
+    
+}
+
+@media (max-width: 767.98) {
+    .why{
+        padding-top: 30px;
+        padding-bottom: 30px;
+    }
+    .why__container{
+        flex-direction: column-reverse;
+    }
+}
