--- a/css/style.css
+++ b/css/style.css
@@ -28,9 +28,25 @@ a {
 }
 
 .page__main {}
-.page__services {
+
+.page__services {}
+
+.page__why {}
+
+.page__advantages {}
+
+.page__testimonials {}
+
+.page_blog {}
+
+.page__start {
+    margin-bottom: 100px;
 }
-.page__why {
+
+@media (max-width: 991.98px) {
+    .page__start {
+        margin-bottom: 50px;
+    }
 }
 
 .header {
@@ -143,9 +159,30 @@ a {
 
 .main__header {}
 
-.header-main {}
+.header-main__body {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+}
 
-.header-main__label{
+.header-main__body .header-main__text {
+    margin: 0;
+}
+
+.header-main__body .header-main__actions {
+    align-self: flex-end;
+    flex: 0 0 auto;
+}
+
+.header-main__body .header-main__title {
+    max-width: none;
+}
+
+.header-main__body .header-main__text {
+    max-width: 740px;
+}
+
+.header-main__label {
     display: inline-block;
     border: 1px solid rgb(129, 129, 139, 0.2);
     border-radius: 12px;
@@ -155,12 +192,15 @@ a {
     padding: 11px 18px;
     transition: border 0.3s ease 0s;
 }
-.header-main__label:hover{
+
+.header-main__label:hover {
     border: 1px solid rgb(129, 129, 139, 0.4);
 }
-.header-main__label:not(:last-child){
+
+.header-main__label:not(:last-child) {
     margin-bottom: 19px;
 }
+
 .header-main__title {
     font-weight: 500;
     font-size: 51px;
@@ -189,9 +229,11 @@ a {
     row-gap: 15px;
 }
 
-.header-main__button {}
+.header-main__button {
+    align-self: flex-end;
+}
 
-.header-main__list li{
+.header-main__list li {
     position: relative;
     min-height: 32px;
     padding-left: 40px;
@@ -199,48 +241,65 @@ a {
     padding-top: 4px;
     line-height: 1.5;
 }
-.header-main__list li:not(:last-child){
+
+.header-main__list li:not(:last-child) {
     margin-bottom: 16px;
 }
-.header-main__list li::before{
+
+.header-main__list li::before {
     content: "";
     position: absolute;
     left: 0;
     top: 0;
-    widows: 32px;
+    width: 32px;
     height: 32px;
     border-radius: 50%;
     background: rgb(129, 129, 139, 0.1) url(/img/why/li.svg) center no-repeat;
-    
+
 }
 
 @media (max-width: 991.98px) {
-    .header-main__title{
+    .header-main__title {
         font-size: 44px;
     }
 }
 
 @media (min-width:768px) {
-    .header-main__title{
+    .header-main__title {
         max-width: 520px;
     }
-    .header-main__text{
+
+    .header-main__text {
         max-width: 500px;
     }
 }
 
 @media (max-width: 767.98px) {
-    .header-main__title{
+    .header-main__title {
         font-size: 32px;
     }
+
     .header-main__title:not(:last-child) {
         margin-bottom: 15px;
     }
-    
+
+    .header-main__text:not(:last-child) {
+        margin-bottom: 15px;
+    }
+
+    .header-main__body {
+        flex-direction: column;
+        gap: 0;
+    }
+
+    .header-main__body .header-main__actions {
+        align-self: start;
+    }
 }
+
 @media (max-width: 479.98px) {
 
-    .header-main__actions{
+    .header-main__actions {
         flex-direction: column;
     }
 }
@@ -343,7 +402,7 @@ a {
         width: 100%;
         height: 100%;
         background-color: #000;
-        left: -100%;
+        left: -110%;
         right: 0;
         top: 0;
         padding: 100px 15px 30px 15px;
@@ -499,24 +558,26 @@ a {
         padding-top: 100px;
         padding-bottom: 30px;
     }
-    .main__container{
+
+    .main__container {
         flex-direction: column;
 
     }
-    .main__conent{
+
+    .main__conent {
         align-self: stretch;
     }
 }
 
-.page__clients {
-   
-}
+.page__clients {}
+
 .clients {
     padding-top: 100px;
     padding-bottom: 70px;
 }
-.clients__container {
-}
+
+.clients__container {}
+
 .clients__title {
     text-align: center;
     text-transform: uppercase;
@@ -526,35 +587,40 @@ a {
     line-height: 1.57;
     margin-bottom: 44px;
 }
+
 .clients__items {
     gap: 15px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
 }
+
 .clients__item img {
     max-width: 100%;
 }
 
-@media (max-width: 991.98) {
-    .clients{
+@media (max-width: 991.98px) {
+    .clients {
         padding-top: 50px;
         padding-bottom: 50px;
     }
-    .clients__title{
+
+    .clients__title {
         margin-bottom: 30px;
     }
 }
 
-@media (max-width: 767.98) {
-    .clients{
+@media (max-width: 767.98px) {
+    .clients {
         padding-top: 30px;
         padding-bottom: 30px;
     }
-    .clients__title{
-        margin-bottom:20px  ;
+
+    .clients__title {
+        margin-bottom: 20px;
     }
 }
+
 /* ---------------------------------------------------------------------- */
 
 
@@ -562,85 +628,96 @@ a {
     padding-top: 70px;
     padding-bottom: 100px;
 }
+
 .services__container {
     display: flex;
     gap: 32px;
 }
+
 .services__content {
     flex: 0 1 50%;
     align-items: center;
 }
-.services__header {
-}
+
+.services__header {}
+
 .services__items {
     flex: 0 1 50%;
     display: flex;
     justify-content: center;
     gap: 32px;
 }
-.services__column {
-}
-.services__column:first-child{
+
+.services__column {}
+
+.services__column:first-child {
     padding-top: 48px;
 }
-.services__item {
-}
-.services__item:not(:last-child){
+
+.services__item {}
+
+.services__item:not(:last-child) {
     margin-bottom: 32px;
 }
+
 .item-services {
     background: rgba(129, 129, 139, 0.1);
     border-radius: 30px;
     padding: 55px 25px;
 }
-.item-services__icon {
-}
-.item-services__icon:not(:last-child){
+
+.item-services__icon {}
+
+.item-services__icon:not(:last-child) {
     margin-bottom: 16px;
 }
+
 .item-services__title {
     font-weight: 400;
     color: #fff;
     font-size: 19px;
-    line-height: 1.42; 
-}
-.item-services__title:not(:last-child){
-    margin-bottom: 10px;
-}
-.item-services__text {
+    line-height: 1.42;
 }
 
-@media (max-width: 1100px){
-    .services__container{
+.item-services__title:not(:last-child) {
+    margin-bottom: 10px;
+}
+
+.item-services__text {}
+
+@media (max-width: 1100px) {
+    .services__container {
         flex-direction: column;
     }
+
     .services__header .header-main__title,
-    .services__header .header-main__text{
+    .services__header .header-main__text {
         max-width: none;
     }
 }
 
-@media (max-width: 991.98) {
-    .services{
+@media (max-width: 991.98px) {
+    .services {
         padding-top: 50px;
         padding-bottom: 50px;
     }
-    
+
 }
 
-@media (max-width: 767.98) {
-    .services{
+@media (max-width: 767.98px) {
+    .services {
         padding-top: 30px;
         padding-bottom: 30px;
     }
-    
+
 }
 
-@media (max-width: 620px){
-    .services .items{
+@media (max-width: 620px) {
+    .services .items {
         flex-direction: column;
     }
-    .services__column:first-child{
+
+    .services__column:first-child {
         padding-top: 0px;
     }
 
@@ -653,39 +730,48 @@ a {
     padding-top: 100px;
     padding-bottom: 100px;
 }
+
 .why__container {
     display: flex;
     column-gap: 64px;
     row-gap: 32px;
 }
+
 .why__images {
     flex: 0 1 50%;
 }
+
 .images-why {
     display: flex;
     position: relative;
     align-self: flex-end;
 }
+
 .images-why__item {
     overflow: hidden;
 }
-.images-why__item img{
+
+.images-why__item img {
     max-width: 100%;
 
 }
+
 .images-why__item_1 {
-    border-radius: 90% 0 49% 49%  / 50% 0 31% 31%;
+    border-radius: 90% 0 49% 49% / 50% 0 31% 31%;
 }
+
 .images-why__item_2 {
     align-self: flex-end;
     border-radius: 50% 50% 50% 0;
 }
+
 .why__content {
     flex: 0 1 50%;
     align-self: center;
 }
-.why__header {
-}
+
+.why__header {}
+
 .images-why::before {
     content: "";
     background: url(/img/decor.svg) 0 0 / 100% no-repeat;
@@ -697,20 +783,618 @@ a {
 }
 
 
-@media (max-width: 991.98) {
-    .why{
+@media (max-width: 991.98px) {
+    .why {
         padding-top: 50px;
         padding-bottom: 50px;
     }
-    
+
 }
 
-@media (max-width: 767.98) {
-    .why{
+@media (max-width: 767.98px) {
+    .why {
         padding-top: 30px;
         padding-bottom: 30px;
     }
-    .why__container{
+
+    .why__container {
         flex-direction: column-reverse;
+    }
+}
+
+
+/* =========================================================================================== */
+
+
+.advantages {
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
+.advantages__container {
+    display: flex;
+    row-gap: 32px;
+}
+
+.advantages__items {
+    flex: 1 1 auto;
+    padding-right: 32px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 32px;
+}
+
+.advantages__item {
+    padding: 40px;
+    background: rgba(129, 129, 139, 0.1);
+    border-radius: 30px;
+}
+
+.advantages__value {
+    font-size: 51px;
+    color: #fff;
+    font-weight: 500;
+}
+
+.advantages__value:not(:last-child) {
+    margin-bottom: 32px;
+}
+
+.advantages__text {
+    font-size: 18px;
+    line-height: 1.5;
+
+}
+
+.advantages__image {
+    align-self: flex-end;
+    flex: 0 0 38%;
+    overflow: hidden;
+    border-radius: 0 50% 50% 50%;
+}
+
+.advantages__image img {
+    max-width: 100%;
+}
+
+@media (max-width: 991.98px) {
+    .advantages {
+        padding-top: 50px;
+        padding-bottom: 50px;
+    }
+
+    .advantages__container {
+        flex-direction: column;
+    }
+
+    .advantages__image {
+        align-self: center;
+    }
+
+    .advantages__items {
+        padding-right: 0%;
+    }
+}
+
+@media (max-width: 767.98px) {
+    .advantages {
+        padding-top: 30px;
+        padding-bottom: 30px;
+    }
+
+}
+
+@media (max-width: 650px) {
+    .advantages__items {
+        grid-template-columns: auto;
+    }
+}
+
+
+/* ============================================================================ */
+
+
+
+.testimonials {
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
+.testimonials__container {}
+
+.testimonials__header {
+    margin-bottom: 64px;
+}
+
+.testimonials__items {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 32px;
+}
+
+.testimonials__item {}
+
+.user-testimonial {
+    display: flex;
+    align-items: center;
+    gap: 16px;
+}
+
+.item-testimonial {
+    padding: 64px 40px;
+    background: rgba(129, 129, 139, 0.2);
+    border-radius: 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+}
+
+.item-testimonial__user {}
+
+.user-item-testimonial {}
+
+.user-testimonial__avatar {
+    flex: 0 0 68px;
+    overflow: hidden;
+}
+
+.user-testimonial__avatar img {
+    max-width: 100%;
+    transform: scale(1.1);
+}
+
+.user-testimonial__avatar_1 {
+    border-radius: 0 50% 50% 50%;
+}
+
+.user-testimonial__avatar_2 {
+    border-radius: 50% 0% 50% 50%;
+}
+
+.user-testimonial__avatar_3 {
+    border-radius: 50% 50% 0% 50%;
+}
+
+.user-testimonial___body {}
+
+.user-testimonial__title {
+    line-height: 1.5;
+    color: #fff;
+}
+
+.user-testimonial__title:not(:last-child) {
+    margin-bottom: 7px;
+    line-height: 1.57;
+}
+
+.user-testimonial__company {
+    font-size: 14px;
+
+}
+
+.item-testimonial__title {
+    color: #fff;
+    font-size: 32px;
+    line-height: 1.4;
+}
+
+.item-testimonial__text {
+    font-style: 16px;
+    flex: 1 1 auto;
+    line-height: 1.5;
+}
+
+.item-testimonial__rating {}
+
+
+@media(max-width: 1100px) {
+    .testimonials__items {
+        grid-template-columns: auto;
+    }
+}
+
+
+@media (max-width: 991.98px) {
+    .testimonials {
+        padding-top: 50px;
+        padding-bottom: 50px;
+    }
+
+    .testimonials__header {
+        margin-bottom: 40px;
+    }
+}
+
+@media (max-width: 767.98px) {
+    .testimonials {
+        padding-top: 30px;
+        padding-bottom: 30px;
+    }
+
+    .item-testimonial {
+        padding: 30px 15px;
+    }
+}
+
+
+/* =========================================================================================== */
+
+
+
+.blog {
+    padding-top: 100px;
+    padding-bottom: 200px;
+}
+
+.blog__container {}
+
+.blog__header {
+    margin-bottom: 64px;
+}
+
+.blog__items {
+    display: grid;
+    gap: 48px;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.blog__item {}
+
+.item-blog {
+    background: rgba(129, 129, 139, 0.1);
+    border-radius: 24px;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
+}
+
+.item-blog__header {
+    position: relative;
+}
+
+.item-blog__category {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background: rgba(129, 129, 139, 0.5);
+    border-radius: 0px 10px 0px 0px;
+    color: #fff;
+    font-size: 14px;
+    padding: 10px;
+    line-height: 1.57;
+}
+
+.item-blog__image {
+    display: block;
+    position: relative;
+    padding-bottom: 49%;
+}
+
+.item-blog__image img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    object-fit: cover;
+}
+
+.item-blog__body {
+    padding: 36px 26px;
+}
+
+.item-blog__date {
+    color: rgba(129, 129, 139, 0.9);
+}
+
+.item-blog__date:not(:last-child) {
+    margin-bottom: 20px;
+}
+
+.item-blog__title {
+    color: #fff;
+    font-size: 19px;
+    line-height: 1.42;
+}
+
+.item-blog__title:hover {
+    text-decoration: underline;
+}
+
+.item-blog__title:not(:last-child) {
+    margin-bottom: 30px;
+}
+
+.item-blog__link-title {}
+
+.item-blog__text {}
+
+.item-blog__text:not(:last-child) {
+    margin-bottom: 21px;
+}
+
+.item-blog__link {
+    color: #3d96f4;
+}
+
+.item-blog__link:hover {
+    text-decoration: underline;
+}
+
+@media (max-width: 1100px) {
+    .blog__items {
+        gap: 20px;
+    }
+
+    .item-blog__body {
+        padding: 25px 15px;
+    }
+}
+
+@media (max-width: 991.98px) {
+    .blog {
+        padding-top: 50px;
+        padding-bottom: 100px;
+    }
+
+    .blog__header {
+        margin-bottom: 44px;
+    }
+
+}
+
+@media (max-width: 767.98px) {
+    .blog {
+        padding-top: 30px;
+        padding-bottom: 50px;
+    }
+
+    .blog__header {
+        margin-bottom: 25px;
+    }
+
+    .blog__items {
+        grid-template-columns: auto;
+    }
+}
+
+/* ============================================== */
+
+
+
+.start {}
+
+.start__container {}
+
+.start__body {
+    background: rgba(129, 129, 139, 0.1);
+    border-radius: 30px;
+    display: flex;
+    align-items: center;
+    padding: 50px 40px;
+}
+
+.start__column {
+    flex: 0 1 50%;
+    text-align: center;
+}
+
+.start__title {
+    color: #fff;
+    font-size: 32px;
+    font-weight: 400;
+    line-height: 1.4;
+}
+
+.start__title:not(:last-child) {
+    margin-bottom: 16px;
+}
+
+.start__text {
+    max-width: 340px;
+    display: inline-block;
+}
+
+.start__actions {
+    display: flex;
+    column-gap: 32px;
+    row-gap: 20px;
+    justify-content: center;
+}
+
+.start__button {
+    width: 100%;
+}
+
+@media (max-width: 991.98px) {
+    .start__body {
+        align-items: stretch;
+        flex-direction: column;
+        row-gap: 30px;
+    }
+}
+
+@media (max-width: 767.98px) {
+    .start__title {
+        font-size: 24px;
+    }
+}
+
+@media (max-width: 479.98px) {
+    .start__actions {
+        flex-direction: column;
+    }
+}
+
+/* =================================================== */
+
+.footer {}
+
+.footer__main {
+    padding-top: 160px;
+    padding-bottom: 160px;
+}
+
+@media (max-width: 991.98px) {
+    .footer__main {
+        padding-top: 80px;
+        padding-bottom: 80px;
+    }
+}
+
+@media (max-width: 767.98px) {
+    .footer__main {
+        padding-top: 40px;
+        padding-bottom: 40px;
+    }
+}
+
+.main-footer {
+}
+
+.main-footer__container {
+    display: grid;
+    gap: 64px;
+    grid-template-columns: minmax(auto, 378px) auto auto minmax(auto, 378px);
+}
+
+@media (max-width: 1100px) {
+    .main-footer_container {
+        gap: 45px;
+        grid-template-columns: minmax(auto, 378px) auto auto;
+    }
+
+    .main-footer__column:nth-child(1) {
+        grid-column-span: 3;
+    }
+}
+
+@media (max-width: 767.98px) {
+    .main-footer_container {
+        gap: 35px;
+        grid-template-columns: auto auto;
+    }
+
+    .main-footer__column:nth-child(1) {
+        grid-column-span: 2;
+    }
+
+    .main-footer__column:nth-child(4) {
+        grid-column-span: 2;
+    }
+}
+
+.main-footer__column {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+
+.main-footer__logo {}
+
+.main-ffoter__text {}
+
+.main-footer__social {}
+
+.social {
+    display: flex;
+    gap: 16px;
+}
+
+.social__link {
+    flex: 0 0 36px;
+    height: 36px;
+    border: 1px solid rgba(129, 129, 139, 0.9);
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: border 0.3s ease 0s;
+}
+
+.social__link:hover {
+    color: #fff;
+}
+
+.main-footer__label {
+    font-size: 20px;
+    color: #fff;
+    font-weight: 500;
+    line-height: 1.2;
+}
+
+.main-footer__label:not(:last-child) {
+    margin-bottom: 30px;
+}
+
+.main-footer__menu {}
+
+.menu-footer {}
+
+.menu-footer__list {
+    display: grid;
+    gap: 24px;
+}
+
+.menu-footer__item {}
+
+.menu-footer__link {
+    line-height: 1.4;
+}
+
+.menu-footer__link:hover {
+    color: #fff;
+}
+
+.main-footer__subscribe {}
+
+.subscribe {
+    display: flex;
+    gap: 16px;
+}
+
+@media (max-width: 479.98px) {
+    .subscribe {
+        flex-direction: column;
+    }
+}
+
+.subscribe__input {
+    width: 100%;
+    height: 52px;
+    border: 1px solid rgba(129, 129, 139, 0.3);
+    border-radius: 50px;
+    padding: 0px 30px;
+    color: #fff;
+    background-color: transparent;
+}
+
+.subscribe__input::placeholder {
+    color: #999999;
+}
+
+.subscribe__button {}
+
+.footer__bottom {}
+
+.bottom-footer {
+    border-top: 1px solid #000;
+    padding-top: 45px;
+    padding-bottom: 45px;
+}
+
+.bottom-footer__container {}
+
+.bottom-footer__copy {
+    text-align: center;
+    color: #fff;
+}
+
+@media (max-width: 767.98px) {
+    .bottom-footer {
+        padding-top: 30px;
+        padding-bottom: 30px;
     }
 }
